--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ timezone: Africa/Algiers
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: Riad's blog # the main title
+title: Riad Benosmane # the main title
 
 tagline: A text-focused Jekyll theme # it will display as the subtitle
 
