--- a/_config.yml
+++ b/_config.yml
@@ -16,10 +16,10 @@ timezone: Africa/Algiers
 
 title: Riad Benosmane # the main title
 
-tagline: A text-focused Jekyll theme # it will display as the subtitle
+tagline: Soc analyste, aspiring penetration tester # it will display as the subtitle
 
 description: >- # used by seo meta and the atom feed
-  A minimal, responsive and feature-rich Jekyll theme for technical writing.
+  Personal blog to share write-ups on cybersecurity challenges from Hack The Box, along with knowledge and tutorials.
 
 # Fill in the protocol & hostname for your site.
 # E.g. 'https://username.github.io', note that it does not end with a '/'.
